[project]
name = "mem0-server"
version = "0.0.1"
description = "Mem0 API server"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.115.8",
  "uvicorn==0.34.0",
  "pydantic==2.10.4",
  "mem0ai>=0.1.48",
  "python-dotenv==1.0.1",
  "psycopg>=3.2.8",
  "psycopg-pool>=3.2.6,<4.0.0",
  "ollama>=0.1.0,<1.0.0",
  "langchain-neo4j>=0.1.0,<1.0.0",
  "rank-bm25>=0.2.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
